fixed  input overflow for mobile

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ main {
     display: grid;
     align-items: center;
     grid-template-columns: repeat(2, 3fr);
-    width: screen;
 }
 
 .intro-text {
@@ -67,6 +66,7 @@ main {
 }
 
 .form-area {
+    width: fit-content;
     grid-column: 2/3;
 }
 
@@ -206,10 +206,18 @@ a[href="#validate"]:hover {
     background-color: hsl(154, 71%, 66%);
 }
 
+.form-area {
+    width: fit-content;
+}
+
+.form-content {
+    width: fit-content;
+}
+
 
 /***** mobile design *****/
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:375px) {
     body {
         background: var(--Mobile-background);
     }
@@ -224,13 +232,28 @@ a[href="#validate"]:hover {
     }
     .text-info {
         text-align: center;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+    .top-form {
+        background: var(--accent-Blue);
+        color: white;
+        padding: 10px 20px;
+        margin: 10px auto;
+        width: fit-content;
+    }
+    .form-area {
+        width: fit-content;
     }
 }
 
 
 /***** ipads/tablet screen *****/
 
-@media screen and (max-width:768px) and (min-width:481px) {
+@media only screen and (max-width:768px) {
     body {
         background: var(--Mobile-background);
     }
@@ -245,6 +268,11 @@ a[href="#validate"]:hover {
     }
     .text-info {
         text-align: center;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
     }
 }
 
